# the-rust-of-us

./: .gitignore  Cargo.toml  README.md  index.html
assets/: char.json  characters.json  decor.json  map.csv  stage_1-1.yml  timeline.csv  timeline.yml
raw/: man.psd  prompt-map.md  prompt.md  skeleton.psd
src/: lib.rs  macros.rs  main.rs
src/afterlife/: mod.rs  over.rs
src/animations/: build.rs  entities.rs  mod.rs  utils.rs
src/brains/: actions.rs  behavior.rs  enemies.rs  enemy.rs  fight.rs  human.rs  loot.rs  mod.rs  skeleton.rs  thinker.rs
src/characters/: actions.rs  ani.rs  bar.rs  builder.rs  control.rs  entities.rs  kind.rs  mod.rs  move.rs  position.rs  update.rs
src/control/: bar.rs  character.rs  mod.rs
src/core/: chest.rs  damage.rs  gate.rs  grave.rs  layer.rs  library.rs  map.rs  menu.rs  mod.rs  play.rs  point.rs  position.rs  scene.rs  setup.rs  stage.rs  state.rs
src/dialogs/: ask.rs
src/entry/: game.rs  menu.rs  mod.rs  splash.rs
src/interactions/: damage.rs  mod.rs  toggle.rs
src/maps/: gen.rs
src/pathfinder/: astar.rs  mod.rs  node.rs
src/timeline/: entity.rs  init.rs
src/web/: button.rs  local_storage.rs  mod.rs  phantom.rs  phantom_connect.rs
