[package]
name = "the_rust_of_us"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.14.2"
bevy_spritesheet_animation = "0.4.2"
extol_sprite_layer = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy_stat_bars = { git = "https://github.com/adrien-bon/bevy_stat_bars"}
csv = "1.3.0"
anyhow = "1.0.87"
serde_yaml = "0.9.34"
pathfinding = "4.11.0"
lazy_static = "1.5.0"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.4"
big-brain = { version = "0.21.1", features = ["trace"] }
rand = "0.8.5"
wasm-bindgen = "0.2.93"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[features]
default = ["bevy"]
bevy = []
trace = []
